tests/negative/bad11.sp
(* Example of a bad index access *)

MyArray : [Int];

WriteSomething : Void (Array : [Int]) {
	write(Array, 10);
}

main : Int () {
	value = MyArray[0;
}

